trab/3/tests/should_fail/sintatico01.py
if a:
    b = 2
else:
    b = 3
else:
    b = 4
